--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,7 +23,7 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: frontend
           environment_name: Frontend-env
-          existing_bucket_name: elasticbeanstalk-us-east-1-216011774063
-          region: us-east-1
+          existing_bucket_name: elasticbeanstalk-eu-north-1-448049832615
+          region: eu-north-1
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
